# Codex-Sessions-Tool

./: .coverage  .editorconfig  .gitignore  .pylintrc  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  codecov.yml  coverage.xml  mypy.ini  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  codequality.yml  pylint.yml
cli/: __init__.py  export_session.py  group_session.py  ingest_session.py  migrate_sqlite_to_postgres.py  redaction_rules.py
docs/: architecture.md  cli.md  migration.md  redaction_rules.md  schema.md  schema_changes.md
reports/: session.txt
src/: __init__.py
src/core/: __init__.py
src/parsers/: __init__.py  session_parser.py
src/services/: __init__.py  config.py  database.py  ingest.py  postgres_schema.py  redaction_rules.py  redactions.py  sanitization.py  validation.py
tests/: conftest.py  coverage.xml  test_agent_config.py  test_base_types.py  test_cli_and_parser.py  test_codex_components.py  test_codex_parser.py  test_config.py  test_conftest_behaviors.py  test_db_utils_and_handlers.py  test_ingest.py  test_migrate_sqlite_to_postgres.py  test_models.py  test_parser_interface.py  test_redaction_rules.py  test_redactions.py  test_services_utils.py  test_session_parser_helpers.py
tests/cli/: test_cli_and_parser.py  test_cli_helpers.py  test_cli_scripts.py  test_export_session.py  test_ingest.py  test_ingest_branches.py  test_ingest_coverage_gaps.py  (+2 more)
user/: config.example.toml  redactions.yml
(+33 files in other folders)
