[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-log-trail"
version = "0.1.0"
requires-python = ">=3.12"
description = "Transparency tooling for AI agent session logs."
readme = "README.md"
authors = [{name = "Codex with Lauren Parlett"}]
license = {text = "MIT"}
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]
postgres = ["psycopg2-binary>=2.9", "types-psycopg2"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"
